2 - securing spring boot app using Spring Security & static credentials

--- a/section1/springsecsection1/src/main/resources/application.properties
+++ b/section1/springsecsection1/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=${SPRING_APP_NAME:springsecsection1}
 
+spring.security.user.name=${SECURITY_USERNAME:user}
+spring.security.user.password=${SECURITY_PASSWORD:admin}
+
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
 
 
-## Note here 'SPRING_APP_NAME' and 'LOGPATTERN_CONSOLE' are env variable with default value
+## Note here 'SPRING_APP_NAME' and 'LOGPATTERN_CONSOLE' are env variable with default values
+## 'SECURITY_USERNAME' and 'SECURITY_PASSWORD' are also env variable with default values
