--- a/section1/springsecsection1/src/main/resources/application.properties
+++ b/section1/springsecsection1/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=${SPRING_APP_NAME:springsecsection1}
 spring.security.user.name=${SECURITY_USERNAME:user}
 spring.security.user.password=${SECURITY_PASSWORD:admin}
 
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
+
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
 
